✨ Add highlight functionality

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -6703,18 +6703,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* While the Transformer architecture has become the de-facto standard for natural language processing tasks, its applications to computer vision remain limited.\n",
-      "* In vision, attention is either applied in conjunction with convolutional networks, or used to replace certain components of convolutional networks while keeping their overall structure in place.\n",
-      "* We show that this reliance on CNNs is not necessary and a pure transformer applied directly to sequences of image patches can perform very well on image classification tasks.\n",
-      "* When pre-trained on large amounts of data and transferred to multiple mid-sized or small image recognition benchmarks (ImageNet, CIFAR-100, VTAB, etc.\n",
-      "* Vision Transformer (ViT) attains excellent results compared to state-of-the-art convolutional networks while requiring substantially fewer computational resources to train.\n",
+      "* Neural language models are probabilistic models of human text.\n",
+      "* They are predom-   inantly trained using maximum likelihood estimation (MLE), which is equivalent   to minimizing the forward cross-entropy between the empirical data distribution   and the model distribution.\n",
+      "* However, various degeneration phenomena are still   widely observed when decoding from the distributions learned by such models.\n",
+      "* We establish that the forward cross-entropy is suboptimal as a distance metric for   aligning human and model distribution due to its (1) recall-prioritization (2) neg-   ative diversity ignorance and (3) train-test mismatch.\n",
+      "* In this paper, we propose   Earth Mover Distance Optimization (EMO) for auto-regressive language model-   ing.\n",
+      "* EMO capitalizes on the inherent properties of earth mover distance to address   the aforementioned challenges.\n",
+      "* Due to the high complexity of direct computation,   we further introduce a feasible upper bound for EMO to ease end-to-end training.\n",
+      "* Upon extensive evaluation of language models trained using EMO and MLE.\n",
+      "* We   find that EMO demonstrates a consistently better language modeling performance   than MLE across domains.\n",
+      "* Moreover, EMO demonstrates noteworthy enhance-   ments in downstream performance with minimal fine-tuning on merely 25,000   sentences.\n",
+      "* This highlights the tremendous potential of EMO as a lightweight cal-   ibration method for enhancing large-scale pre-trained language models.\n",
+      "* Our code   and data are available at ab.\n",
       "\n"
      ]
     },
@@ -6780,23 +6787,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['natural language processing tasks', 'computer vision remain limited', 'de-facto', 'transformer architecture', 'applications', 'become']\n",
-      "['vision', 'convolutional networks', 'either applied', 'keeping', 'attention', 'used', 'overall structure', 'replace certain components', 'place', 'conjunction']\n",
-      "['pure transformer applied directly', 'image patches', 'well', 'image classification tasks', 'cnns', 'perform', 'sequences', 'necessary', 'show', 'reliance']\n",
-      "['transferred', 'imagenet', 'data', 'large amounts', 'small image recognition benchmarks', 'pre-trained', 'etc', 'mid-sized', 'vtab', 'cifar', 'CIFAR-100']\n",
-      "['attains excellent results compared', 'state-of', 'the-art', 'vit', 'train', 'vision transformer', 'requiring substantially fewer computational resources']\n",
-      "- While the <span class='color-4'>Transformer architecture</span> has <span class='color-2'>become</span> the <span class='color-3'>de-facto</span> standard for <span class='color-1'>natural language processing tasks</span>, its <span class='color-1'>applications</span> to <span class='color-2'>computer vision remain limited</span>.\n",
-      "- In <span class='color-1'>vision</span>, <span class='color-1'>attention</span> is <span class='color-3'>either applied</span> in <span class='color-2'>conjunction</span> with <span class='color-2'>convolutional networks</span>, or <span class='color-2'>used</span> to <span class='color-4'>re<span class='color-1'>place</span> certain components</span> of <span class='color-2'>convolutional networks</span> while <span class='color-4'>keeping</span> their <span class='color-3'>overall structure</span> in <span class='color-1'>place</span>.\n",
-      "- We <span class='color-1'>show</span> that this <span class='color-2'>reliance</span> on <span class='color-1'>CNNs</span> is not <span class='color-4'>necessary</span> and a <span class='color-1'>pure transformer applied directly</span> to <span class='color-3'>sequences</span> of <span class='color-2'>image patches</span> can <span class='color-2'>perform</span> very <span class='color-3'>well</span> on <span class='color-4'>image classification tasks</span>.\n",
-      "- When <span class='color-2'>pre-trained</span> on <span class='color-4'>large amounts</span> of <span class='color-3'>data</span> and <span class='color-1'>transferred</span> to multiple <span class='color-4'>mid-sized</span> or <span class='color-1'>small image recognition benchmarks</span> (<span class='color-2'>ImageNet</span>, <span class='color-2'>CIFAR</span>-100, <span class='color-1'>VTAB</span>, <span class='color-3'>etc</span>.\n",
-      "- <span class='color-2'>Vision Transformer</span> (<span class='color-4'>ViT</span>) <span class='color-1'>attains excellent results compared</span> to <span class='color-2'>state-of</span>-<span class='color-3'>the-art</span> convolutional networks while <span class='color-3'>requiring substantially fewer computational resources</span> to <span class='color-1'>train</span>.\n",
+      "['human text', 'neural language models', 'probabilistic models']\n",
+      "['minimizing', 'predom', 'cross-entropy', 'inantly trained using maximum likelihood estimation', 'model distribution', 'mle ),', 'equivalent', 'empirical data distribution']\n",
+      "['however', 'still widely observed', 'decoding', 'various degeneration phenomena', 'distributions learned', 'models']\n",
+      "['recall-prioritization', 'distance metric', 'ative diversity ignorance', 'establish', 'neg', 'aligning human', 'cross-entropy', 'model distribution due', 'train-test', 'suboptimal']\n",
+      "['auto-regressive', 'ing', 'propose earth mover distance optimization', 'paper', 'emo']\n",
+      "['address', 'aforementioned challenges', 'emo capitalizes', 'inherent properties', 'earth mover distance']\n",
+      "['introduce', 'end-to', 'feasible upper bound', 'direct computation', 'high complexity', 'emo', 'due']\n",
+      "['upon extensive evaluation', 'language models trained using emo', 'mle']\n",
+      "['consistently better language modeling performance', 'mle across domains', 'find', 'emo demonstrates']\n",
+      "['ments', 'fine-tuning', 'downstream performance', '000 sentences', 'merely 25', 'moreover', 'emo demonstrates noteworthy enhance']\n",
+      "['tremendous potential', 'ibration method', 'pre-trained', 'highlights', 'large-scale', 'emo']\n",
+      "['available', 'code', 'ab', 'data']\n",
+      "- <span class='color-2'>Neural language models</span> are <span class='color-3'>probabilistic models</span> of <span class='color-1'>human text</span>.\n",
+      "- They are <span class='color-2'>predom</span>-   <span class='color-4'>inantly trained using maximum likelihood estimation</span> (MLE), which is <span class='color-3'>equivalent</span>   to <span class='color-1'>minimizing</span> the forward <span class='color-3'>cross-entropy</span> between the <span class='color-4'>empirical data distribution</span>   and the <span class='color-1'>model distribution</span>.\n",
+      "- <span class='color-1'>However</span>, <span class='color-4'>various degeneration phenomena</span> are still   widely observed when <span class='color-3'>decoding</span> from the <span class='color-1'>distributions learned</span> by such <span class='color-2'>models</span>.\n",
+      "- We <span class='color-4'>establish</span> that the forward <span class='color-3'>cross-entropy</span> is <span class='color-2'>suboptimal</span> as a <span class='color-2'>distance metric</span> for   <span class='color-2'>aligning human</span> and <span class='color-4'>model distribution due</span> to its (1) <span class='color-1'>recall-prioritization</span> (2) <span class='color-1'>neg</span>-   <span class='color-3'>ative diversity ignorance</span> and (3) <span class='color-1'>train-test</span> mismatch.\n",
+      "- In this <span class='color-4'>paper</span>, we propose   Earth Mover Distance Optimization (<span class='color-1'>EMO</span>) for <span class='color-1'>auto-regressive</span> language model-   <span class='color-2'>ing</span>.\n",
+      "- <span class='color-3'>EMO capitalizes</span> on the <span class='color-4'>inherent properties</span> of <span class='color-1'>earth mover distance</span> to <span class='color-1'>address</span>   the <span class='color-2'>aforementioned challenges</span>.\n",
+      "- <span class='color-3'>Due</span> to the <span class='color-1'>high complexity</span> of <span class='color-4'>direct computation</span>,   we further <span class='color-1'>introduce</span> a <span class='color-3'>feasible upper bound</span> for <span class='color-2'>EMO</span> to ease <span class='color-2'>end-to</span>-end training.\n",
+      "- <span class='color-1'>Upon extensive evaluation</span> of <span class='color-2'>language models trained using EMO</span> and <span class='color-3'>MLE</span>.\n",
+      "- We   <span class='color-3'>find</span> that <span class='color-4'>EMO demonstrates</span> a <span class='color-1'>consistently better language modeling performance</span>   than <span class='color-2'>MLE across domains</span>.\n",
+      "- <span class='color-2'>Moreover</span>, <span class='color-3'>EMO demonstrates noteworthy enhance</span>-   <span class='color-1'>ments</span> in <span class='color-3'>downstream performance</span> with minimal <span class='color-2'>fine-tuning</span> on <span class='color-1'>merely 25</span>,000   sentences.\n",
+      "- This <span class='color-4'>highlights</span> the <span class='color-1'>tremendous potential</span> of <span class='color-2'>EMO</span> as a lightweight cal-   <span class='color-2'>ibration method</span> for enhancing <span class='color-1'>large-scale</span> <span class='color-3'>pre-trained</span> language models.\n",
+      "- Our <span class='color-2'>code</span>   and <span class='color-4'>data</span> are <span class='color-1'>avail<span class='color-3'>ab</span>le</span> at <span class='color-3'>ab</span>.\n",
       "\n"
      ]
     }
@@ -6834,13 +6855,13 @@
     "   # Create a pattern to match any word that has a hyphen in it\n",
     "    pattern = re.compile(r\"\\b\\w+-\\w+\\b\")\n",
     "    words_with_hyphen = pattern.findall(sentence)\n",
-    "    for i, keyword in enumerate(keywords_extracted):\n",
+    "    for i, keyword in enumerate(keywords_extracted):                                   \n",
     "        for word in words_with_hyphen:\n",
     "            for single_keyword in keyword.split(\" \"):\n",
     "                if single_keyword in word:\n",
     "                    keywords_extracted[i] = word\n",
     "    \n",
-    "    return list(set(keywords_extracted))\n",
+    "    return list(set([keyword for keyword in keywords_extracted if len(keyword) > 1]))\n",
     "\n",
     "\n",
     "sents = get_sentences(paragraph)\n",
