✨ Introduce indentation feature

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -6787,65 +6787,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transition_phrases = [\n",
+    "    \"additionally\",\n",
+    "    \"comparatively\",\n",
+    "    \"in like manner\",\n",
+    "    \"correspondingly\",\n",
+    "    \"similarly\",\n",
+    "    \"equally\",\n",
+    "    \"in the same way\",\n",
+    "    \"equally important\",\n",
+    "    \"like to say nothing of\",\n",
+    "    \"To this end\",\n",
+    "    \"likewise\",\n",
+    "    \"as a matter of fact\",\n",
+    "    \"furthermore\",\n",
+    "    \"moreover\",\n",
+    "    \"identically\",\n",
+    "    \"not only\",\n",
+    "    \"uniquely\",\n",
+    "    \"by the same token\",\n",
+    "    \"in addition\",\n",
+    "    \"not to mention\",\n",
+    "    \"what is more\",\n",
+    "    \"another key point\",\n",
+    "    \"important to realize\",\n",
+    "    \"namely\",\n",
+    "    \"to clarify\",\n",
+    "    \"as an illustration\",\n",
+    "    \"in fact\",\n",
+    "    \"notably\",\n",
+    "    \"to demonstrate\",\n",
+    "    \"in general\",\n",
+    "    \"to emphasize\",\n",
+    "    \"in other words\",\n",
+    "    \"This is to say\",\n",
+    "    \"This\",\n",
+    "    \"That\",\n",
+    "    \"They\",\n",
+    "    \"Their\",\n",
+    "    \"Those\",\n",
+    "    \"These\",\n",
+    "    \"to enumerate\",\n",
+    "    \"expressively\",\n",
+    "    \"in particular\",\n",
+    "    \"to explain\",\n",
+    "    \"in this case\",\n",
+    "    \"significantly\",\n",
+    "    \"to point out\",\n",
+    "    \"specifically\",\n",
+    "    \"to put it another way\",\n",
+    "    \"for example\",\n",
+    "    \"indeed\",\n",
+    "    \"to put it differently\",\n",
+    "    \"for instance\",\n",
+    "    \"for one thing\",\n",
+    "    \"markedly\",\n",
+    "    \"surprisingly\",\n",
+    "    \"for this reason\",\n",
+    "    \"that is to say\",\n",
+    "    \"to be sure\",\n",
+    "    \"accordingly\",\n",
+    "    \"consequently\",\n",
+    "    \"henceforth\",\n",
+    "    \"thereupon\",\n",
+    "    \"as a result\",\n",
+    "    \"for this reason\",\n",
+    "    \"in that case\",\n",
+    "    \"thus\",\n",
+    "    \"forthwith\",\n",
+    "    \"therefore\",\n",
+    "    \"hence\",\n",
+    "    \"still\",\n",
+    "    \"be that as it may\",\n",
+    "    \"in contrast\",\n",
+    "    \"yet\",\n",
+    "    \"besides\",\n",
+    "    \"in spite of\",\n",
+    "    \"otherwise\",\n",
+    "    \"after all\",\n",
+    "    \"conversely\",\n",
+    "    \"instead\",\n",
+    "    \"rather\",\n",
+    "    \"albeit\",\n",
+    "    \"nevertheless\",\n",
+    "    \"although\",\n",
+    "    \"nonetheless\",\n",
+    "    \"then again\",\n",
+    "    \"although this may be\",\n",
+    "    \"even so\",\n",
+    "    \"notwithstanding\",\n",
+    "    \"even though\",\n",
+    "    \"whereas\",\n",
+    "    \"at the same time\",\n",
+    "    \"however\",\n",
+    "    \"on the contrary\",\n",
+    "    \"in view of\",\n",
+    "    \"after all\",\n",
+    "    \"for the most part\",\n",
+    "    \"in either case\",\n",
+    "    \"in fact\",\n",
+    "    \"as has been noted\",\n",
+    "    \"in brief\",\n",
+    "    \"in the final analysis\",\n",
+    "    \"in conclusion\",\n",
+    "    \"meanwhile\",\n",
+    "    \"further\",\n",
+    "    \"next\",\n",
+    "    \"then\",\n",
+    "    \"hence\",\n",
+    "    \"now\",\n",
+    "    \"henceforth\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['human text', 'neural language models', 'probabilistic models']\n",
-      "['minimizing', 'predom', 'cross-entropy', 'inantly trained using maximum likelihood estimation', 'model distribution', 'mle ),', 'equivalent', 'empirical data distribution']\n",
-      "['however', 'still widely observed', 'decoding', 'various degeneration phenomena', 'distributions learned', 'models']\n",
-      "['recall-prioritization', 'distance metric', 'ative diversity ignorance', 'establish', 'neg', 'aligning human', 'cross-entropy', 'model distribution due', 'train-test', 'suboptimal']\n",
-      "['auto-regressive', 'ing', 'propose earth mover distance optimization', 'paper', 'emo']\n",
-      "['address', 'aforementioned challenges', 'emo capitalizes', 'inherent properties', 'earth mover distance']\n",
-      "['introduce', 'end-to', 'feasible upper bound', 'direct computation', 'high complexity', 'emo', 'due']\n",
-      "['upon extensive evaluation', 'language models trained using emo', 'mle']\n",
-      "['consistently better language modeling performance', 'mle across domains', 'find', 'emo demonstrates']\n",
-      "['ments', 'fine-tuning', 'downstream performance', '000 sentences', 'merely 25', 'moreover', 'emo demonstrates noteworthy enhance']\n",
-      "['tremendous potential', 'ibration method', 'pre-trained', 'highlights', 'large-scale', 'emo']\n",
-      "['available', 'code', 'ab', 'data']\n",
-      "- <span class='color-2'>Neural language models</span> are <span class='color-3'>probabilistic models</span> of <span class='color-1'>human text</span>.\n",
-      "- They are <span class='color-2'>predom</span>-   <span class='color-4'>inantly trained using maximum likelihood estimation</span> (MLE), which is <span class='color-3'>equivalent</span>   to <span class='color-1'>minimizing</span> the forward <span class='color-3'>cross-entropy</span> between the <span class='color-4'>empirical data distribution</span>   and the <span class='color-1'>model distribution</span>.\n",
-      "- <span class='color-1'>However</span>, <span class='color-4'>various degeneration phenomena</span> are still   widely observed when <span class='color-3'>decoding</span> from the <span class='color-1'>distributions learned</span> by such <span class='color-2'>models</span>.\n",
-      "- We <span class='color-4'>establish</span> that the forward <span class='color-3'>cross-entropy</span> is <span class='color-2'>suboptimal</span> as a <span class='color-2'>distance metric</span> for   <span class='color-2'>aligning human</span> and <span class='color-4'>model distribution due</span> to its (1) <span class='color-1'>recall-prioritization</span> (2) <span class='color-1'>neg</span>-   <span class='color-3'>ative diversity ignorance</span> and (3) <span class='color-1'>train-test</span> mismatch.\n",
-      "- In this <span class='color-4'>paper</span>, we propose   Earth Mover Distance Optimization (<span class='color-1'>EMO</span>) for <span class='color-1'>auto-regressive</span> language model-   <span class='color-2'>ing</span>.\n",
-      "- <span class='color-3'>EMO capitalizes</span> on the <span class='color-4'>inherent properties</span> of <span class='color-1'>earth mover distance</span> to <span class='color-1'>address</span>   the <span class='color-2'>aforementioned challenges</span>.\n",
-      "- <span class='color-3'>Due</span> to the <span class='color-1'>high complexity</span> of <span class='color-4'>direct computation</span>,   we further <span class='color-1'>introduce</span> a <span class='color-3'>feasible upper bound</span> for <span class='color-2'>EMO</span> to ease <span class='color-2'>end-to</span>-end training.\n",
-      "- <span class='color-1'>Upon extensive evaluation</span> of <span class='color-2'>language models trained using EMO</span> and <span class='color-3'>MLE</span>.\n",
-      "- We   <span class='color-3'>find</span> that <span class='color-4'>EMO demonstrates</span> a <span class='color-1'>consistently better language modeling performance</span>   than <span class='color-2'>MLE across domains</span>.\n",
-      "- <span class='color-2'>Moreover</span>, <span class='color-3'>EMO demonstrates noteworthy enhance</span>-   <span class='color-1'>ments</span> in <span class='color-3'>downstream performance</span> with minimal <span class='color-2'>fine-tuning</span> on <span class='color-1'>merely 25</span>,000   sentences.\n",
-      "- This <span class='color-4'>highlights</span> the <span class='color-1'>tremendous potential</span> of <span class='color-2'>EMO</span> as a lightweight cal-   <span class='color-2'>ibration method</span> for enhancing <span class='color-1'>large-scale</span> <span class='color-3'>pre-trained</span> language models.\n",
-      "- Our <span class='color-2'>code</span>   and <span class='color-4'>data</span> are <span class='color-1'>avail<span class='color-3'>ab</span>le</span> at <span class='color-3'>ab</span>.\n",
+      "- <span class='color-3'>Neural language models</span> are <span class='color-4'>probabilistic models</span> of <span class='color-2'>human text</span>.\n",
+      "  - They are <span class='color-3'>predominantly trained using maximum likelihood estimation</span> (MLE), which is <span class='color-2'>equivalent</span> to <span class='color-4'>minimizing</span> the forward <span class='color-3'>cross-entropy</span> between the <span class='color-2'>empirical data distribution</span> and the <span class='color-4'>model distribution</span>.\n",
+      "    - <span class='color-4'>However</span>, <span class='color-2'>various degeneration phenomena</span> are <span class='color-2'>still widely observed</span> when <span class='color-3'>decoding</span> from the <span class='color-3'>distributions learned</span> by such <span class='color-1'>models</span>.\n",
+      "  - We <span class='color-4'>establish</span> that the forward <span class='color-2'>cross-entropy</span> is <span class='color-2'>suboptimal</span> as a <span class='color-1'>distance metric</span> for <span class='color-3'>aligning human</span> and <span class='color-4'>model distribution due</span> to its (1) <span class='color-1'>recall-prioritization</span> (2) <span class='color-2'>negative diversity ignorance</span> and (3) <span class='color-3'>train-test</span> mismatch.\n",
+      "- In this <span class='color-2'>paper</span>, we <span class='color-3'>propose Earth Mover Distance Optimization</span> (<span class='color-4'>EMO</span>) for <span class='color-1'>auto-regressive</span> language modeling.\n",
+      "  - <span class='color-4'>EMO capitalizes</span> on the <span class='color-1'>inherent properties</span> of <span class='color-3'>earth mover distance</span> to <span class='color-2'>address</span> the <span class='color-2'>aforementioned challenges</span>.\n",
+      "  - <span class='color-2'>Due</span> to the <span class='color-3'>high complexity</span> of <span class='color-4'>direct computation</span>, we further <span class='color-2'>introduce</span> a <span class='color-4'>feasible upper bound</span> for <span class='color-3'>EMO</span> to ease <span class='color-1'>end-to</span>-end training.\n",
+      "  - <span class='color-4'>Upon extensive evaluation</span> of <span class='color-2'>language models trained using EMO</span> and <span class='color-3'>MLE</span>.\n",
+      "  - We <span class='color-1'>find</span> that <span class='color-4'>EMO demonstrates</span> a <span class='color-2'>consistently better language modeling performance</span> than <span class='color-3'>MLE across domains</span>.\n",
+      "    - <span class='color-2'>Moreover</span>, <span class='color-3'>EMO demonstrates noteworthy enhancements</span> in <span class='color-2'>downstream performance</span> with minimal <span class='color-4'>fine-tuning</span> on <span class='color-3'>merely 25</span>,<span class='color-1'>000 sentences</span>.\n",
+      "  - This <span class='color-3'>highlights</span> the <span class='color-2'>tremendous potential</span> of <span class='color-3'>EMO</span> as a <span class='color-1'>lightweight calibration method</span> for enhancing <span class='color-4'>large-scale</span> <span class='color-2'>pre-trained</span> language models.\n",
+      "  - Our <span class='color-1'>code</span> and <span class='color-3'>data</span> are <span class='color-2'>available</span> at https://github.<span class='color-4'>com</span>/<span class='color-2'>DRSY</span>/<span class='color-3'>EMO</span>.\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/essam/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to /Users/essam/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
    "source": [
+    "import string\n",
+    "import nltk\n",
+    "from rake_nltk import Rake\n",
     "import re\n",
+    "\n",
+    "nltk.download('punkt')  # Download the punkt tokenizer data if not already installed\n",
+    "nltk.download('stopwords')  # Download the punkt tokenizer data if not already installed\n",
+    "rake_nltk_var = Rake()\n",
     "\n",
     "def get_sentences(paragraph):\n",
     "    paragraph = paragraph.replace(\"\\n\", \" \")\n",
     "    sentences = nltk.sent_tokenize(paragraph)\n",
     "    return sentences\n",
     "\n",
-    "def get_bullets_from_sents(sentences):\n",
-    "    bullets_text = \"\"\n",
-    "    for sentence in sentences:\n",
-    "        sentence = colorize(sentence)\n",
-    "        bullets_text += \"- \" + sentence + \"\\n\"\n",
+    "import re\n",
+    "\n",
+    "def correct_hyphenation(text):\n",
+    "    result_string = text.replace('- ', '')\n",
+    "    return result_string\n",
+    "\n",
+    "def remove_et_al_pattern(input_string):\n",
+    "    # Remove patterns with \"et al\" inside parentheses\n",
+    "    pattern_et_al = r'\\([^)]*et al[^)]*\\)'\n",
+    "    result_string = re.sub(pattern_et_al, '', input_string)\n",
+    "\n",
+    "    # Remove spaces before punctuation\n",
+    "    result_string = re.sub(r'\\s+([.,;!?])', r'\\1', result_string)\n",
+    "\n",
+    "    # Replace two or more spaces with one space\n",
+    "    result_string = re.sub(r'\\s{2,}', ' ', result_string)\n",
+    "\n",
+    "    return result_string\n",
+    "\n",
+    "\n",
+    "def get_bullet( sentence, level):\n",
+    "    if level == 1:\n",
+    "        bullets_text = \"- \" + sentence + \"\\n\"\n",
+    "    elif level == 2:\n",
+    "        bullets_text = \"  - \" + sentence + \"\\n\"\n",
+    "    else:\n",
+    "        bullets_text = \"    - \" + sentence + \"\\n\"\n",
     "    return bullets_text\n",
+    "\n",
+    "\n",
+    "def probably_transition_sentence(sentence, transition_phrases):\n",
+    "    return any(sentence.lower().startswith(phrase.lower()) for phrase in transition_phrases)\n",
+    "\n",
+    "\n",
+    "def get_bullets_from_sents(sentences, remove_refs=True):\n",
+    "    bullets_text = \"\"\n",
+    "    init_keywords = []\n",
+    "    prev_keywords = []\n",
+    "    indent_state = 1\n",
+    "    for i, sentence in enumerate(sentences):\n",
+    "        if remove_refs: sentence = remove_et_al_pattern(sentence)\n",
+    "        sentence = correct_hyphenation(sentence)\n",
+    "        colored_sentence, keywords = colorize(sentence)\n",
+    "        if i == 0 : init_keywords = keywords\n",
+    "        if probably_transition_sentence(sentence, transition_phrases):\n",
+    "            indent_state = 3 if indent_state == 2 else 2\n",
+    "        elif check_keyword_overlap(keywords, prev_keywords, init_keywords, i):\n",
+    "            indent_state = 2\n",
+    "        else:\n",
+    "            indent_state = 1\n",
+    "            init_keywords = keywords\n",
+    "            \n",
+    "        bullets_text += get_bullet(colored_sentence, indent_state)\n",
+    "    return bullets_text\n",
+    "\n",
+    "def check_keyword_overlap(keywords, prev_keywords, init_keywords, i):\n",
+    "    split_prev_keywords = [word.lower() for keyword in prev_keywords for word in keyword.split()]\n",
+    "    split_init_keywords = [word.lower() for keyword in init_keywords for word in keyword.split()]\n",
+    "    split_keywords = [word.lower() for keyword in keywords for word in keyword.split()]\n",
+    "\n",
+    "    # Check the condition\n",
+    "    return any(\n",
+    "        word in split_prev_keywords \n",
+    "        or (word in split_init_keywords and i > 0)\n",
+    "        for word in split_keywords\n",
+    "    )\n",
     "\n",
     "def colorize(sentence, classes=[\"color-1\", \"color-2\", \"color-3\", \"color-4\"]):\n",
     "    sentence = sentence.strip().lstrip(string.punctuation).strip()\n",
     "    keywords_extracted = get_keywords(sentence)\n",
-    "    print(keywords_extracted)\n",
     "    for i, keyword in enumerate(keywords_extracted):\n",
     "        if keyword.casefold() in sentence.casefold():\n",
-    "            pattern = re.compile(re.escape(keyword), flags=re.IGNORECASE)\n",
-    "            sentence = re.sub(pattern, lambda match: f\"<span class='{classes[i % 4]}'>{match.group()}</span>\", sentence)\n",
-    "    return sentence\n",
+    "            pattern = re.compile(rf'\\b{re.escape(keyword)}\\b(?!=)', flags=re.IGNORECASE)\n",
+    "            sentence = re.sub(pattern, lambda match: f\"<span class='{classes[(i+1) % 4]}'>{match.group()}</span>\", sentence)\n",
+    "    return sentence, keywords_extracted\n",
     "\n",
     "def get_keywords(sentence):\n",
     "    rake_nltk_var.extract_keywords_from_text(sentence)\n",
@@ -6864,9 +7047,31 @@
     "    return list(set([keyword for keyword in keywords_extracted if len(keyword) > 1]))\n",
     "\n",
     "\n",
-    "sents = get_sentences(paragraph)\n",
     "\n",
-    "print(get_bullets_from_sents(sents))"
+    "paragraph = \"\"\" \n",
+    "Neural language models are probabilistic models of human text. They are predom-\n",
+    "inantly trained using maximum likelihood estimation (MLE), which is equivalent\n",
+    "to minimizing the forward cross-entropy between the empirical data distribution\n",
+    "and the model distribution. However, various degeneration phenomena are still\n",
+    "widely observed when decoding from the distributions learned by such models.\n",
+    "We establish that the forward cross-entropy is suboptimal as a distance metric for\n",
+    "aligning human and model distribution due to its (1) recall-prioritization (2) neg-\n",
+    "ative diversity ignorance and (3) train-test mismatch. In this paper, we propose\n",
+    "Earth Mover Distance Optimization (EMO) for auto-regressive language model-\n",
+    "ing. EMO capitalizes on the inherent properties of earth mover distance to address\n",
+    "the aforementioned challenges. Due to the high complexity of direct computation,\n",
+    "we further introduce a feasible upper bound for EMO to ease end-to-end training.\n",
+    "Upon extensive evaluation of language models trained using EMO and MLE. We\n",
+    "find that EMO demonstrates a consistently better language modeling performance\n",
+    "than MLE across domains. Moreover, EMO demonstrates noteworthy enhance-\n",
+    "ments in downstream performance with minimal fine-tuning on merely 25,000\n",
+    "sentences. This highlights the tremendous potential of EMO as a lightweight cal-\n",
+    "ibration method for enhancing large-scale pre-trained language models. Our code\n",
+    "and data are available at https://github.com/DRSY/EMO.\n",
+    "\"\"\"\n",
+    "sents = get_sentences(paragraph)\n",
+    "processed_text = get_bullets_from_sents(sents)\n",
+    "print(processed_text)"
    ]
   },
   {
